--- a/Debug/makefile
+++ b/Debug/makefile
@@ -64,8 +64,8 @@ all: main-build
 main-build: QSPI_TEST.elf secondary-outputs
 
 # Tool invocations
-QSPI_TEST.elf QSPI_TEST.map: $(OBJS) $(USER_OBJS) C:\Users\admin\Documents\GitHub\STM32H7_TESTING\STM32H743VITX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "QSPI_TEST.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m7 -T"C:\Users\admin\Documents\GitHub\STM32H7_TESTING\STM32H743VITX_FLASH.ld" --specs=nosys.specs -Wl,-Map="QSPI_TEST.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv5-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+QSPI_TEST.elf QSPI_TEST.map: $(OBJS) $(USER_OBJS) C:\Users\Admin_1\Documents\STM32H7_TESTING\STM32H743VITX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-gcc -o "QSPI_TEST.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m7 -T"C:\Users\Admin_1\Documents\STM32H7_TESTING\STM32H743VITX_FLASH.ld" --specs=nosys.specs -Wl,-Map="QSPI_TEST.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv5-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
